opam-version: "1.2"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
homepage: "https://github.com/mirage/ocaml-rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
dev-repo: "git://github.com/mirage/ocaml-rpc"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build-test: [
    ["jbuilder" "build"]
    ["jbuilder" "runtest" "-j" jobs]
]
depends: [
  "rpclib"
  "rpclib-camlp4"
  "ppx_deriving_rpc"
  "async" {< "v0.10.0"}
  "cow"
  "js_of_ocaml"
  "lwt"
]

