opam-version: "1.2"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
homepage: "https://github.com/mirage/ocaml-rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
dev-repo: "git://github.com/mirage/ocaml-rpc"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [["jbuilder" "build" "--only-packages" "rpclib" "--root" "." "-j" jobs "@install"]]
depends: [
  "jbuilder"  {build}
  "ocamlfind" {build}
  "async"
  "cmdliner"
  "cow"
  "lwt"
  "rresult"
  "xmlm"
]
depopts: [
  "js_of_ocaml"
  "ppx_driver"
  "ppx_jane"
]


